# Blackjack

./: CMakeLists.txt  README.md  vcpkg.json
App/: CMakeLists.txt
App/Source/: main.cpp
Core/: CMakeLists.txt
Core/Include/: card.h  dealer.h  deck.h  game.h  hand.h  player.h
Core/Source/: card.cpp  dealer.cpp  deck.cpp  game.cpp  hand.cpp  player.cpp
